# SBP

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  block_merge.cpp  common.cpp  entropy.cpp  evaluate.cpp  finetune.cpp  graph.cpp  influence.cpp  main.cpp  partition.cpp  sbp.cpp  utils.cpp
StochasticBlockPartition/code/c++/: evaluate.py  evaluation.py  examine.py  main.py  sample.py  samplestack.py  samplestate.py  util.py
StochasticBlockPartition/code/python/: .clang-format  Makefile  block_merge.py  evaluate.py  evaluation.py  graph.py  node_reassignment.py  partition.py  partition_baseline_main.py  partition_baseline_support.py  sample.py  samplestack.py  samplestate.py  sbp.py
StochasticBlockPartition/code/python/utils/: dict_transpose_matrix.py  dictmatrix.py  edge_count_updates.py
StochasticBlockPartition/code/python/utils/cpp/: block_merge.cpp  block_merge.hpp  boost_mapped_matrix.cpp  boost_mapped_matrix.hpp  boost_mapped_matrix_wrapper.cpp  common.cpp  common.hpp  csparse_matrix.hpp  finetune.cpp  finetune.hpp  sbp.cpp  sbp.hpp  sbp_wrapper.hpp  setup.py  test.cpp  wrapper.cpp
StochasticBlockPartition/code/python/utils/cpp/evaluation/: evaluation.hpp
StochasticBlockPartition/code/python/utils/cpp/partition/: partition.cpp  partition.hpp  partition_triplet.cpp  partition_triplet.hpp  partition_wrapper.hpp
StochasticBlockPartition/code/python/utils/cpp/partition/sparse/: boost_mapped_matrix.cpp  boost_mapped_matrix.hpp  boost_mapped_matrix_wrapper.hpp  csparse_matrix.hpp
StochasticBlockPartition/code/python/utils/cpp/util/: util.cpp  util.hpp
StochasticBlockPartition/data/: single_graph_generator.py
blockmodel/: blockmodel.cpp  blockmodel_triplet.cpp  dist_blockmodel.cpp
blockmodel/sparse/: dict_matrix.cpp  dict_transpose_matrix.cpp  dist_dict_matrix.cpp
generator/: generate.sh  simple_generator.py
include/: agglomerative.hpp  args.hpp  block_merge.hpp  common.hpp  divisive_sbp.hpp  entropy.hpp  evaluate.hpp  fastlgamma.hpp  fastlog.hpp  finetune.hpp  globals.hpp  graph.hpp  mpi_data.hpp  partition.hpp  rng.hpp  sample.hpp  sbp.hpp  spence.hpp  top_down.hpp  top_down_sbp.hpp  typedefs.hpp  utils.hpp
include/blockmodel/: blockmodel.hpp  blockmodel_triplet.hpp  dist_blockmodel.hpp
include/blockmodel/sparse/: boost_mapped_matrix.hpp  csparse_matrix.hpp  delta.hpp  dict_matrix.hpp  dict_transpose_matrix.hpp  dist_dict_matrix.hpp  typedefs.hpp  veretex_level_delta.hpp  vertex_level_delta.hpp
include/distributed/: dist_block_merge.hpp  dist_blockmodel_triplet.hpp  dist_common.hpp  dist_dict_matrix.hpp  dist_divisive_sbp.hpp  dist_finetune.hpp  dist_sbp.hpp  dist_top_down_sbp.hpp  divide_and_conquer.hpp  two_hop_blockmodel.hpp
include/graph/: directed_graph.hpp  graph.hpp  graph_interface.hpp  undirected_graph.hpp
include/partition/: partition.hpp  partition_triplet.hpp
include/partition/sparse/: boost_mapped_matrix.hpp  csparse_matrix.hpp  dict_transpose_matrix.hpp  typedefs.hpp
include/sbp/: block_merge.hpp  common.hpp  mpi_utils.hpp  sbp.hpp
include/sbp/blockmodel/: blockmodel.hpp  blockmodel_triplet.hpp
include/sbp/blockmodel/sparse/: dict_transpose_matrix.hpp
partition/: partition.cpp  partition_triplet.cpp
partition/sparse/: boost_mapped_matrix.cpp  dict_transpose_matrix.cpp
sbp/: block_merge.cpp  common.cpp  mpi_utils.cpp  sbp.cpp
sbp/blockmodel/: blockmodel.cpp
sbp/blockmodel/sparse/: dict_transpose_matrix.cpp
scripts/: build.sh  get_gini.py
src/: DivideAndConquerSBP.cpp  DivisiveSBPMain.cpp  HierarchicalDistributedSBP.cpp  LayerDistributedSBP.cpp  TopDownSBPMain.cpp  agglomerative.cpp  agglomerative_main.cpp  block_merge.cpp  common.cpp  divisive_sbp.cpp  entropy.cpp  evaluate.cpp  fastlgamma.cpp  fastlog.cpp  finetune.cpp  globals.cpp  graph.cpp  influence.cpp  main.cpp  partition.cpp  rng.cpp  sample.cpp  sbp.cpp  top_down.cpp  top_down_main.cpp  top_down_sbp.cpp  utils.cpp
src/blockmodel/: blockmodel.cpp  blockmodel_triplet.cpp  dist_blockmodel.cpp
src/blockmodel/sparse/: boost_mapped_matrix.cpp  dict_matrix.cpp  dict_transpose_matrix.cpp  dist_dict_matrix.cpp  pointer_delta.cpp
src/distributed/: dist_block_merge.cpp  dist_blockmodel_triplet.cpp  dist_common.cpp  dist_dict_matrix.cpp  dist_divisive_sbp.cpp  dist_finetune.cpp  dist_sbp.cpp  dist_top_down_sbp.cpp  divide_and_conquer.cpp  two_hop_blockmodel.cpp
src/graph/: directed_graph.cpp  graph.cpp  graph_interface.cpp  undirected_graph.cpp
test/: block_merge_test.cpp  blockmodel_test.cpp  common_test.cpp  dict_matrix_test.cpp  dict_transpose_matrix_test.cpp  entropy_test.cpp  evaluate_test.cpp  finetune_test.cpp  main_test.cpp  nonparametric_entropy_test.cpp  sample_test.cpp  toy_example.hpp  utils_test.cpp
